# neat-ml-schema

./: .gitignore  404.html  CONTRIBUTING.md  Classifier.md  EmbeddingsConfig.md  LayerContainer.md  Makefile  MetricContainer.md  NEAT_schema.md  NodeEmbedMethodEnum.md  NodeEmbeddingsParamsConfig.md  NodeType.md  README.md  SkLearnParams.md  TFKerasParams.md  Target.md  about.yaml  callbacks_list.md  classifier_name.md  classifier_type.md  curve.md  default_weight.md  destinations_column.md  edge_ids_column_number.md  edge_list_is_correct.md  edge_list_max_rows_number.md  edge_list_rows_to_skip.md  edge_method.md  edge_path.md  edge_type_list_comment_symbol.md  edge_type_list_is_correct.md  epochs.md  graph.md  history_filename.md  index.html  index.md  iterations.md  layers_config.md  load_edge_list_in_parallel.md  load_edge_type_list_in_parallel.md  (+32 more)
ActivationEnum/: index.html
ApplyTrainedModel/: index.html
ApplyTrainedModelsContainer/: index.html
Boolean/: index.html
Classifier/: index.html
ClassifierCallback/: index.html
ClassifierCallbackContainer/: index.html
ClassifierCallbackModeEnum/: index.html
ClassifierContainer/: index.html
ClassifierFitParams/: index.html
ClassifierParams/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
EdgeMethodEnum/: index.html
EmbeddingsConfig/: index.html
EnsmallenRunConfig/: index.html
FileResource/: index.html
FileResourceContainer/: index.html
Float/: index.html
GraphDataConfiguration/: index.html
Integer/: index.html
Layer/: index.html
LayerContainer/: index.html
LayerParams/: index.html
Metric/: index.html
MetricContainer/: index.html
NEAT_schema/: index.html
Ncname/: index.html
NeatConfiguration/: index.html
NodeEmbedMethodEnum/: index.html
NodeEmbeddingsParams/: index.html
NodeType/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OptimizerEnum/: index.html
PosNegData/: index.html
SkLearnParams/: index.html
Source/: index.html
String/: index.html
TFKerasParams/: index.html
Time/: index.html
TrainValidData/: index.html
Upload/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
activation/: index.html
batch_size/: index.html
callbacks/: index.html
callbacks_list/: index.html
curve/: index.html
(+656 files in other folders)
