[tool.poetry]
name = "neat-schema"
version = "0.1.0"
description = "Enter description of your project here"
authors = ["Harshad Hegde <hhegde@lbl.gov>"]
license = "MIT"
homepage = "https://knowledge-graph-hub.github.io/NEAT_schema/"
repository = "https://github.com/Knowledge-Graph-Hub/NEAT_schema"
include = ["README.md", "src/linkml/*.yaml", "project", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"
linkml-runtime = "^1.1.24"
tox = "^3.25.0"
pytest = "^7.1.2"
linkml = "^1.2.11"

[tool.poetry.dev-dependencies]
linkml = "^1.2.6"
mkdocs-material = "^8.2.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]